syntax = "proto3";

package pb;

option go_package = "github.com/souzamoab/products-api-golang/pb";
import "product.proto";
import "rpc_create_product.proto";
import "rpc_update_product.proto";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse) {}
  rpc GetProduct(ProductRequest) returns (ProductResponse) {}
  rpc GetProducts(GetProductsRequest) returns (stream Product) {}
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse) {}
  rpc DeleteProduct(ProductRequest) returns (DeleteProductResponse) {}
}

message GetProductsRequest {
  oneof pagination {
    int64 page = 1;
    int64 limit = 2;
  }
}

message ProductRequest { string Id = 1; }

message DeleteProductResponse { bool success = 1; }